...
          ]}
        >
          {index > -1 ? (
            <TouchableOpacity
              style={styles.button}
              onPress={this.handleNavigateBack}
              testID="back-button"
            >
              <Ionicons
                name={
                  Platform.OS === 'android' ? 'md-arrow-back' : 'ios-arrow-back'
                }
                size={24}
...
          <Text style={[styles.title, tintColor ? { color: tintColor } : null]}>
            {index > -1 ? EXAMPLE_COMPONENTS[index].title : this.state.title}
          </Text>
          {index > -1 ? <View style={styles.button} /> : null}
        </View>
        {index === -1 ? (
          <ScrollView testID="example_list">
            {EXAMPLE_COMPONENTS.map(this.renderItem)}
          </ScrollView>
        ) : ExampleComponent ? (
          <ExampleComponent />
        ) : null}
      </View>
...
